# PhytO-ARM

./: .gitignore  .gitmodules  CLAUDE.md  DAEMON.md  Dockerfile  DutyCycle-README.md  DutyCycleOperations-README.md  README.md  apt-requirements.txt  config.toml  deps.rosinstall  dli_relay.py  docker-compose.yml  output.txt  pa  phyto-arm  phyto-arm.service  phyto_arm_daemon.py  python3-requirements.txt  rbr_relay.sh  ros_entrypoint.sh  rosdo  rosexec  server.py  super-sipper-documentation.md  test_daemon.py
.devcontainer/: devcontainer.json
configs/: example.yaml  seatrac.yaml
content/: Alma_guide.md  MAC400_guide.md  NUC_setup.md  Winch_hardware_guide.md  _index.md  contributors.md
ifcb_routines/: beads.json  biocide.json  bleach.json  cartridgedebubble.json  debubble.json  flushsampletube.json  initialize.json  primesampletube.json  runaltsample.json  runsample.json  sampletocone.json  stopsample.json
ros1/: .gitignore
ros1/aml_ctd/: CMakeLists.txt  package.xml  setup.py
ros1/aml_ctd/src/: aml_ctd_node.py  amlxparser.py
ros1/dli_power_switch/: CMakeLists.txt  setup.py
ros1/dli_power_switch/src/: api.py  dli_power_switch_node.py
ros1/ifcb/: CMakeLists.txt  package.xml
ros1/ifcb/nodes/: ifcb  ifcb_logfilter
ros1/ifcb/src/ifcb/: instrumentation.py  logfilter_node.py
ros1/ifcb/srv/: RunRoutine.srv
ros1/ifcb/tests/: test_instrumentation.py
ros1/jvl_motor/: CMakeLists.txt  package.xml
ros1/jvl_motor/srv/: SetVelocityCmd.srv
ros1/rbr_maestro3_ctd/: package.xml  rbr_relay.service  rbr_relay.sh
ros2/src/dli_power_switch/: CMakeLists.txt  package.xml
ros2/src/dli_power_switch/dli_power_switch/: __init__.py  dli_power_switch_node.py
ros2/src/dli_power_switch/tests/: test_api.py
ros2/src/ifcb/: CMakeLists.txt  package.xml
ros2/src/ifcb/ifcb/: __init__.py  logfilter_node.py  node.py
ros2/src/ifcb/tests/: test_instrumentation.py
ros2/src/jvl_motor/: CMakeLists.txt  package.xml
ros2/src/jvl_motor/jvl_motor/: __init__.py  jvl_motor_node.py
ros2/src/jvl_motor/srv/: SetPositionEnvelopeCmd.srv
ros2/src/jvl_motor/tests/: test_mac400.py
ros2/src/phyto_arm/: CMakeLists.txt  package.xml
ros2/src/phyto_arm/action/: MoveToDepth.action  RunIFCB.action
ros2/src/phyto_arm/launch/: arm_ifcb.launch.xml  arm_seatrac.launch.xml  main.launch.xml  mock_arm_chanos.launch.xml  mock_arm_ifcb.launch.xml  rosbag.launch.xml
ros2/src/phyto_arm/msg/: ConductorState.msg
ros2/src/phyto_arm/phyto_arm/: __init__.py  arm_chanos.py  arm_ifcb.py  ifcb_runner.py  network_data_capture.py  tests.py  web_node.py  winch_node.py
ros2/src/phyto_arm/phyto_arm/mocks/: __init__.py  mock_ifcb_runner.py  mock_winch_node.py
ros2/src/phyto_arm/srv/: LockCheck.srv
ros2/src/rbr_maestro3_ctd/: CMakeLists.txt  package.xml
ros2/src/rbr_maestro3_ctd/rbr_maestro3_ctd/: __init__.py  rbr_maestro3_node.py
scripts/: config_validation.py  config_validation.test.py  docker_run.sh  docker_run_aml.sh  docker_run_daemon.sh  generate-rosdep-requirements.sh  manual_motor_control.py  tmux_kill.sh  tmux_run.sh
src/aml_ctd/: CMakeLists.txt  package.xml
src/aml_ctd/msg/: AmlMeasurement.msg
src/aml_ctd/src/: aml_ctd_node.py  amlxparser.py
src/aml_ctd/tests/: test_amlxparser.py
src/dli_power_switch/: CMakeLists.txt  package.xml
src/dli_power_switch/msg/: OutletStatus.msg
src/dli_power_switch/src/: dli_power_switch_node.py  scheduling.py
src/dli_power_switch/tests/: test_api.py  test_scheduling_simple.py
src/ifcb/: CMakeLists.txt  package.xml  setup.py
src/ifcb/msg/: TriggerContentDaq.msg
src/ifcb/nodes/: ifcb
src/ifcb/src/: ifcb_node.py
src/ifcb/src/ifcb/: instrumentation.py  node.py
src/ifcb/srv/: Command.srv
src/jvl_motor/: CMakeLists.txt  package.xml  setup.py
src/jvl_motor/msg/: Electrical.msg  Error.msg  Motion.msg
src/jvl_motor/src/: jvl_motor_node.py  mac400.py
src/jvl_motor/srv/: MoveCmd.srv  SetPositionCmd.srv  StopCmd.srv  ZeroCmd.srv
src/jvl_motor/tests/: test_mac400.py
src/pa_base/: CMakeLists.txt  package.xml
src/pa_base/launch/: config.yaml  phyto_arm.launch  rosbag.launch
src/pa_base/src/: instant_replay_node.py  jvl_motor_node.py  mac400.py  mac400registers.py  rbr_maestro3_node.py  web_node.py
src/phyto_arm/: CMakeLists.txt  package.xml
src/phyto_arm/action/: Instrument.action  MoveToDepth.action  Payload.action  RunIFCB.action  RunInstrument.action
src/phyto_arm/launch/: aml_ctd.launch  arm_chanos.launch  arm_duty_cycle.launch  arm_esp.launch  arm_ifcb.launch  arm_oleander.launch  arm_simple_move.launch  arm_sipper.launch  config.yaml  main.launch  mock_arm_chanos.launch  mock_arm_duty_cycle.launch  mock_arm_esp.launch  mock_arm_ifcb.launch  mock_arm_sipper.launch  mock_phyto_arm.launch  phyto_arm.launch  phyto_arm_seatrac.launch  rosbag.launch  seatrac.launch
src/phyto_arm/msg/: ArmRegistration.msg  ArmTask.msg  ConductorStates.msg  DepthProfile.msg  InstrumentGoalDepth.msg  InstrumentStatus.msg  LoggerStatus.msg  RegisterCallback.msg
src/phyto_arm/src/: aml_arm.py  arm_base.py  arm_chanos.py  arm_duty_cycle.py  arm_esp.py  arm_ifcb.py  arm_oleander.py  arm_simple_move.py  arm_sipper.py  conductor_node.py  conductor_nowinch_node.py  config_validation_node.py  config_validation_node.test.py  digital_logger_node.py  ifcb_runner.py  image_transport_node.py  instant_replay_node.py  io_node.py  lock_manager.py  mock_ctd.py  network_data_capture.py  new_conductor.py  observer_node.py  profiler_node.py  rbr_arm.py  seatrac_starlink_manager.py  tests.py  udp_to_ros.py  web_node.py  winch_node.py  winch_semaphore.py
src/phyto_arm/src/mocks/: mock_ctd.py  mock_digital_logger_node.py  mock_ifcb_runner.py  mock_profiler_node.py  mock_winch_node.py
src/phyto_arm/srv/: ArmRegistration.srv  ArmTask.srv
src/phyto_arm/tests/: test_io_node.py  tests.py
src/rbr_maestro3/: CMakeLists.txt  package.xml
src/rbr_maestro3/src/: rbr_maestro3_node.py
src/rbr_maestro3_ctd/: CMakeLists.txt  package.xml  rbr_relay.service
src/rbr_maestro3_ctd/msg/: RbrMeasurement.msg
src/rbr_maestro3_ctd/src/: rbr_maestro3_node.py  udp_to_ros.py
(+94 files in other folders)
