<?xml version="1.0"?>
<package format="2">
    <name>ifcb</name>
    <version>1.0.0</version>
    <description>Driver for an IFCB</description>
    <license>TODO</license>

    <url type="repository">https://github.com/whoigit/PhytO-ARM</url>

    <maintainer email="mbrosnahan@whoi.edu">Michael Brosnahan</maintainer>
    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="mbrosnahan@whoi.edu">Michael Brosnahan</author>
    <author email="rgovostes@whoi.edu">Ryan Govostes</author>

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>rosunit</test_depend>

    <exec_depend>rospy</exec_depend>

    <!-- Most of these are for publishing images and markers -->
    <exec_depend>foxglove_msgs</exec_depend>  <!-- for ImageMarkerArray -->
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>

    <!-- We use the DsHeader and RawData message type -->
    <depend>ds_core_msgs</depend>
</package>
