<?xml version="1.0"?>
<package format="2">
    <name>jvl_motor</name>
    <version>1.0.0</version>
    <description>Controls a JVL MAC400 servo motor</description>
    <license>TODO</license>

    <url type="repository">https://github.com/whoigit/PhytO-ARM</url>

    <maintainer email="mbrosnahan@whoi.edu">Michael Brosnahan</maintainer>
    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="mbrosnahan@whoi.edu">Michael Brosnahan</author>
    <author email="rgovostes@whoi.edu">Ryan Govostes</author>
    <author email="vlucke@whoi.edu">Verena Lucke</author>

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>rosunit</test_depend>

    <exec_depend>rospy</exec_depend>

    <!-- We use the DsHeader message type -->
    <depend>ds_core_msgs</depend>
</package>
