<?xml version="1.0"?>
<package format="2">
    <name>pa_base</name>
    <version>0.0.0</version>
    <description>The pa_base package</description>
    <license>TODO</license>

    <url type="repository">https://github.com/whoigit/PhytO-ARM</url>

    <maintainer email="mbrosnahan@whoi.edu">Michael Brosnahan</maintainer>
    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="mbrosnahan@whoi.edu">Michael Brosnahan</author>
    <author email="rgovostes@whoi.edu">Ryan Govostes</author>
    <author email="vlucke@whoi.edu">Verena Lucke</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>ds_base</build_depend>
    <build_depend>ds_core_msgs</build_depend>
    <build_depend>ds_nmea_msgs</build_depend>

    <exec_depend>ds_sensors</exec_depend>
    <exec_depend>ds_util_nodes</exec_depend>

    <exec_depend>jvl_motor</exec_depend>
    <exec_depend>rbr_maestro3</exec_depend>

    <!--
        Provides a node for recording data from an IP camera.
    -->
    <exec_depend>rocon_rtsp_camera_relay</exec_depend>

    <!--
        Provides the rosbridge_server node, which communicates with Webviz.
    -->
    <exec_depend>rosbridge_server</exec_depend>

    <!-- The web node depends on aiohttp which is not in rosdistro yet. -->
</package>
