<?xml version="1.0"?>
<package format="2">
    <name>phyto_arm</name>
    <version>1.0.0</version>
    <description>The PhytO-ARM project base package</description>
    <license>TODO</license>

    <url type="repository">https://github.com/whoigit/PhytO-ARM</url>

    <maintainer email="mbrosnahan@whoi.edu">Michael Brosnahan</maintainer>
    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="mbrosnahan@whoi.edu">Michael Brosnahan</author>
    <author email="rgovostes@whoi.edu">Ryan Govostes</author>
    <author email="vlucke@whoi.edu">Verena Lucke</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>python-scipy</depend>

    <depend>ds_core_msgs</depend>
    <depend>ds_nmea_msgs</depend>

    <exec_depend>ds_sensors</exec_depend>
    <exec_depend>ds_util_nodes</exec_depend>

    <exec_depend>aml_ctd</exec_depend>
    <exec_depend>ifcb</exec_depend>
    <exec_depend>jvl_motor</exec_depend>
    <exec_depend>rbr_maestro3_ctd</exec_depend>

    <!--
        Dependencies related to republishing the RTSP feed.
    -->
    <exec_depend>compressed_image_transport</exec_depend>
    <exec_depend>rocon_rtsp_camera_relay</exec_depend>

    <!--
        Provides the rosbridge_server node, which communicates with Foxglove.
    -->
    <exec_depend>rosbridge_server</exec_depend>

    <!-- The web node depends on aiohttp which is not in rosdistro yet. -->
</package>
