<?xml version="1.0"?>
<package format="2">
    <name>phyto_arm</name>
    <version>1.0.0</version>
    <description>The PhytO-ARM project base package</description>
    <license>TODO</license>

    <url type="repository">https://github.com/whoigit/PhytO-ARM</url>

    <maintainer email="mbrosnahan@whoi.edu">Michael Brosnahan</maintainer>
    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="mbrosnahan@whoi.edu">Michael Brosnahan</author>
    <author email="rgovostes@whoi.edu">Ryan Govostes</author>
    <author email="vlucke@whoi.edu">Verena Lucke</author>

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>rosunit</test_depend>

    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>

    <depend>python3-numpy</depend>
    <depend>python3-scipy</depend>

    <depend>ds_core_msgs</depend>

    <exec_depend>rospy</exec_depend>

    <exec_depend>ds_util_nodes</exec_depend>

    <exec_depend>aml_ctd</exec_depend>
    <exec_depend>dli_power_switch</exec_depend>
    <exec_depend>ifcb</exec_depend>
    <exec_depend>jvl_motor</exec_depend>
    <exec_depend>rbr_maestro3_ctd</exec_depend>
    <exec_depend>triton_classifier</exec_depend>

    <!-- For GPS -->
    <exec_depend>gpsd_client</exec_depend>

    <!--
        Dependencies related to republishing the RTSP feed.
    -->
    <exec_depend>compressed_image_transport</exec_depend>
    <exec_depend>rtsp_camera</exec_depend>

    <!--
        Provides the rosbridge_server node, which communicates with Foxglove.
    -->
    <exec_depend>rosbridge_server</exec_depend>

    <!-- The web node depends on aiohttp which is not in rosdistro yet. -->
</package>
