<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phyto_arm</name>
  <version>0.0.0</version>
  <description>PhytO-ARM control package</description>
  <maintainer email="user@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>ds_core_msgs</depend>
  <depend>ds_sensor_msgs</depend>
  <depend>wr2_msgs</depend>

  <!-- Uncomment after switching to ROS2 Humble -->
  <!-- <depend>wr2_asio</depend> -->

  <depend>aml_ctd</depend>
  <depend>dli_power_switch</depend>
  <depend>ifcb</depend>
  <depend>jvl_motor</depend>
  <depend>rbr_maestro3_ctd</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-geopy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
