<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbr_maestro3_ctd</name>
  <version>1.0.0</version>
  <description>Captures data from an RBR maestro3 CTD</description>
  <license>BSD</license>

  <url type="repository">https://github.com/whoigit/PhytO-ARM</url>

  <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <depend>ds_core_msgs</depend>
  <depend>ds_sensor_msgs</depend>
  <depend>wr2_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rospy_too</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
